tests/lean/attrCmd.lean.expected.out
attrCmd.lean:6:0-6:6: error: failed to synthesize
  Pure M
use `set_option diagnostics true` to get diagnostic information
